# TP1-AEDS-

./: CMakeLists.txt  main.c
TP1/TP1/: CMakeLists.txt
TP1/TP1/headers/: Dicionario.h  Linhas.h  ListaPalavras.h  palavra.h
TP1/TP1/sources/: Dicionario.c  Linhas.c  ListaPalavra.c  main.c  palavra.c
TP1/headers/: Dicionario.h  Linhas.h  ListaPalavras.h  palavra.h
TP1/sources/: Linhas.c  ListaPalavra.c  palavra.c
headers/: Dicionario.h  Linhas.h  ListaPalavra.h  dicionario.h  linhas.h  listaPalavra.h  listaPalavras.h  palavra.h
sources/: dicionario.c  linhas.c  listaPalavra.c  listaPalavras.c  palavra.c
